--- a/ActiveWear.Core.Entities/ActiveWear.Core.csproj
+++ b/ActiveWear.Core.Entities/ActiveWear.Core.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ActiveWear.Common\ActiveWear.Common.csproj" />
+  </ItemGroup>
+
 </Project>
