--- a/ActiveWear.WebApi/appsettings.Development.json
+++ b/ActiveWear.WebApi/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "ActiveWearShop": "Data Source=localhost;Initial Catalog=ActiveWearShop;Integrated Security=true;TrustServerCertificate=true;"
   }
 }
